Revert "Fix overflowing order--tabs"
This reverts commit 738677319329f6cba6daedc19d01202fcaab70b8.

--- a/src/styles/scss/_order.scss
+++ b/src/styles/scss/_order.scss
@@ -34,7 +34,6 @@
     margin: 0 auto;
     position: relative;
     border: 1px solid #DBE0E8;
-    overflow: hidden;
 
     >div {
         border-radius: 12px 12px 0 0;
